python/testData/highlighting/emptyTypeParameterConstraintReported.py
class ClassC[T: <error descr="Two or more types required">()</error>]: ...